; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_cfil_sock_detach.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_cfil_sock_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.socket = type { i32, i64, i32* }

@SOF_CONTENT_FILTER = common dso_local global i32 0, align 4
@cfil_stats = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cfil_sock_detach(%struct.socket* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.socket*, align 8
  store %struct.socket* %0, %struct.socket** %3, align 8
  %4 = load %struct.socket*, %struct.socket** %3, align 8
  %5 = call i64 @IS_UDP(%struct.socket* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.socket*, %struct.socket** %3, align 8
  %9 = call i32 @cfil_db_free(%struct.socket* %8)
  store i32 0, i32* %2, align 4
  br label %48

10:                                               ; preds = %1
  %11 = load %struct.socket*, %struct.socket** %3, align 8
  %12 = getelementptr inbounds %struct.socket, %struct.socket* %11, i32 0, i32 2
  %13 = load i32*, i32** %12, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %47

15:                                               ; preds = %10
  %16 = load %struct.socket*, %struct.socket** %3, align 8
  %17 = getelementptr inbounds %struct.socket, %struct.socket* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load i32, i32* @SOF_CONTENT_FILTER, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %39

22:                                               ; preds = %15
  %23 = load i32, i32* @SOF_CONTENT_FILTER, align 4
  %24 = xor i32 %23, -1
  %25 = load %struct.socket*, %struct.socket** %3, align 8
  %26 = getelementptr inbounds %struct.socket, %struct.socket* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = and i32 %27, %24
  store i32 %28, i32* %26, align 8
  %29 = load %struct.socket*, %struct.socket** %3, align 8
  %30 = getelementptr inbounds %struct.socket, %struct.socket* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = icmp sgt i64 %31, 0
  %33 = zext i1 %32 to i32
  %34 = call i32 @VERIFY(i32 %33)
  %35 = load %struct.socket*, %struct.socket** %3, align 8
  %36 = getelementptr inbounds %struct.socket, %struct.socket* %35, i32 0, i32 1
  %37 = load i64, i64* %36, align 8
  %38 = add nsw i64 %37, -1
  store i64 %38, i64* %36, align 8
  br label %39

39:                                               ; preds = %22, %15
  %40 = load %struct.socket*, %struct.socket** %3, align 8
  %41 = getelementptr inbounds %struct.socket, %struct.socket* %40, i32 0, i32 2
  %42 = load i32*, i32** %41, align 8
  %43 = call i32 @cfil_info_free(i32* %42)
  %44 = load %struct.socket*, %struct.socket** %3, align 8
  %45 = getelementptr inbounds %struct.socket, %struct.socket* %44, i32 0, i32 2
  store i32* null, i32** %45, align 8
  %46 = call i32 @OSIncrementAtomic(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cfil_stats, i32 0, i32 0))
  br label %47

47:                                               ; preds = %39, %10
  store i32 0, i32* %2, align 4
  br label %48

48:                                               ; preds = %47, %7
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i64 @IS_UDP(%struct.socket*) #1

declare dso_local i32 @cfil_db_free(%struct.socket*) #1

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @cfil_info_free(i32*) #1

declare dso_local i32 @OSIncrementAtomic(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
